We need LEAVEL not LEAVE!!!
How to control gcc generate LEAVEL instead of LEAVE????
After thinking, it seems that gcc won't generate LEAVEL. Cause in gcc's mind, he always in 32-bit mode.

Maybe Assembler can add prefix 0x66 before LEAVE.

This is some note useless:
# Something about -mregparm=3:
#	Real-Mode call instruction push 2 bytes IP into stack. When procedure AA
#	make a call to procedure BB, the first argument AA passes to BB is located
#	at 6(%ebp). However, GCC donot know this! In GCC's mind, the first argument
#	should be at 8(%ebp). Using -mregparam to pass arguments by registers avoids
#	such fatal problem. See code yourself.


2015/04/17

TODAY IS A BIG DAY.
MANY THANKS TO GNU ASSEMBLER AND .CODE16GCC

1. USE .code16gcc INSTEAD OF .code16. The first directive tells AS that the assembler
   code was generated by GCC. When AS see this directive, AS knows that one guy is trying
   to write 16-bit code with C language! So AS will add prefix 0x66&0x67 automatically
   before [call], [ret], [leave], [jmp](and so on). Before today i really really haven't
   seen if there exist some differences between .code16gcc and .code16.

2. Ok now we have .code16gcc to fire. Although we are still run in Real-Mode, but the
   most important instructions like call, ret, leave, push now all have 32-bit prefixes,
   which means they all operate in 4-byte world! Call is calll, ret is retl, leave is leavel.

3. Now we really dont need -mregparm anymore. The reason is we are in a "32-bit" Real-Mode,
   calll pushs 4bytes into stack. BTW, the code generated with -mregparam opinion is some
   kind of redundant. In some code, the caller put arguments in eax-edx-ecx, but the callee
   push the three registers into stack first, then use arguments in stack.

4. Conclusion: problem raised yesterday is solved! Just use .code16gcc instead of .code16,
   we are free in Read-Mode C programming!!!
